--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "sas": "^3.0.4",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
